# Chess-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Bishop.h  Board.h  CMakeLists.txt  Chess.h  CustomExceptions.h  King.h  Knight.h  Move.h  MoveSuggester.h  Pawn.h  Piece.h  PriorityQueue.h  Queen.h  Rook.h  TopMoves.h
src/: Bishop.cpp  Board.cpp  CMakeLists.txt  Chess.cpp  King.cpp  Knight.cpp  MoveSuggester.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  TopMoves.cpp  main.cpp
